adicionando testes ao CI

--- a/.github/workflows/workflow-ci.yml
+++ b/.github/workflows/workflow-ci.yml
@@ -28,6 +28,7 @@ jobs:
           npm run dev &
           sleep 10
           pkill -f "npm run dev"
+          npm run test
 
       - name: Run front-end
         run: |
