--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "jest" 
+    "test": "jest --testTimeout=5000 --forceExit" 
   },
   "keywords": [],
   "author": "",
