nova lógica de CI

--- a/.github/workflows/workflow-ci.yml
+++ b/.github/workflows/workflow-ci.yml
@@ -21,14 +21,10 @@ jobs:
           
           cd ../front-end
           npm install
-      
-      - name: Create a .env file
-        run: |
-          cd back-end
-          run: echo "DB_HOST="mongodb://localhost:27017"" > .env
-
 
       - name: Run back-end
+        env:
+          $DB_HOST: mongodb://localhost:27017
         run: |
           cd back-end
           npm run dev &
