--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "jest --testTimeout=5000 --forceExit" 
+    "test": "jest --testTimeout=5000 --forceExit"
   },
   "keywords": [],
   "author": "",
@@ -39,6 +39,7 @@
     "supertest": "^6.3.3"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "jest-redis": "^0.1.0"
   }
 }
