--- a/back-end/package.json
+++ b/back-end/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^7.1.0",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
+    "openai": "^3.3.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "redis": "^4.6.7",
