--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jest/globals": "^29.6.1",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "chai": "^4.3.7",
@@ -40,6 +41,7 @@
     "supertest": "^6.3.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.3",
     "jest": "^29.5.0",
     "jest-redis": "^0.1.0"
   }
