variaveis de ambiente atualizadas

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,1 +1,3 @@
 DB_HOST="mongodb+srv://arthurmelo1918:71JuBrKKWQr6kAfU@dubium0.o4ru6rq.mongodb.net/Dubium"
+API_KEY="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"
+ORG="org-ZKypXgICyNRD0O6urMB1v5Eh"
