--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,6 @@
 site_name: Dubium
 theme:
   name: material
-
   features:
     - navigation.tabs
     - navigation.top
@@ -13,17 +12,13 @@ theme:
     - content.action.edit
     - content.action.view
     - navigation.footer
-
   language: en
   palette:
     scheme: slate
-
 copyright: |
   &copy; 2023 <a href="https://github.com/james-willett"  target="_blank" rel="noopener">Two Dwo</a>
-
 nav:
   - Início: "inicial.md"
-
   - Documentação:
       - Visão Geral do Produto: "visaoProduto.md"
       - Visão Geral do Projeto: "visaoProjeto.md"
@@ -33,7 +28,6 @@ nav:
       - Relatório de Testes: "relatorioArmazenai.md"
       - Lições Aprendidas: "licoesAprendidas.md"
       - Referências Bibliográficas: "referencias.md"
-
   - Entregas:
       - Unidade 1:
           - Seminário - Processos e Ciclos de Vida: "entrega1-conectafga.md"
@@ -50,9 +44,19 @@ nav:
 
   - Backlog do Produto:
       - Backlog: "backlog-conectafga.md"
+
+    
+          
+            
+    
+
+          
+          Expand Down
+    
+    
+  
       - MVPs: "mvps1e2.md"
       - Estratégia de testes: "estrategiaTestes.md"
-
   - Sprints:
       - Historico de Revisão: "sprintConecta/historico_sprints.md"
       - Sprint 1:
@@ -75,10 +79,8 @@ nav:
           - Planning: "sprintConecta/sprint_05/planning.md"
           - Review: "sprintConecta/sprint_05/review.md"
           - Retrospective: "sprintConecta/sprint_05/retrospective.md"
-
 extra:
   prev_next_buttons: true
-
 markdown_extensions:
   - pymdownx.details
   - pymdownx.highlight:
@@ -98,6 +100,5 @@ markdown_extensions:
   # - pymdownx.emoji:
   #     emoji_index: !!python/name:materialx.emoji.twemoji
   #     emoji_generator: !!python/name:materialx.emoji.to_svg
-
 extra_css:
-  - stylesheets/extra.css
+- stylesheets/extra.css
